--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+0.2.2
+ * Fixed bug switching tables
+ * Menubar icons added
+ * Internationalization preparation (po file is available)
+
 0.2.1
  * Format menu added
  * Printing bug (first line not printed) fixed
