update link in README (sourceforge -> github)

--- a/README
+++ b/README
@@ -6,4 +6,4 @@ Copyright by Martin Manns
 
 See INSTALL file for installation and COPYING file for lincense
 
-Homepage: http://pyspread.sf.net
+Homepage: http://manns.github.com/pyspread/
