pot file generated, translators added to authors and about dialog

--- a/pyspread/authors
+++ b/pyspread/authors
@@ -1,3 +1,12 @@
-pyspread authors:
+Pyspread authors
+================
 
 Martin Manns
+
+
+
+Translators
+===========
+
+Danish:     Joe Hansen
+Dutch:      Mark Haanen
