--- a/pyspread/thanks
+++ b/pyspread/thanks
@@ -1,7 +1,10 @@
-Thanks to:
+Thanks to
+=========
 
-Bosko Markovic     		for setting up the pyspread wiki
-Andy Throgmorton   		for testing pyspread
-Shai Revzen        		for the cycle detection algorithm
+Bosko Markovic                  for setting up the pyspread wiki
+Andy Throgmorton                for testing pyspread
+Shai Revzen          	         for the cycle detection algorithm
 
-The Tango Icon Library project	for their great work.
+The Translation Project         for making localization possible
+
+The Tango Icon Library project  for their great work.
