Fix minor typos in messages

--- a/pyspread/po/da.po
+++ b/pyspread/po/da.po
@@ -606,7 +606,7 @@ msgstr ""
 "Overskriv?"
 
 #: src/gui/_main_window.py:658
-msgid "File collison"
+msgid "File collision"
 msgstr "Filkollidering"
 
 #: src/gui/_main_window.py:662
@@ -850,7 +850,7 @@ msgid "Whole word"
 msgstr "Helt ord"
 
 #: src/gui/_toolbars.py:153
-msgid "Search string is surronted by whitespace characters"
+msgid "Search string is surrounded by whitespace characters"
 msgstr "Søgestreng er omgivet af mellemrumstegn"
 
 #: src/gui/_toolbars.py:170
