--- a/pyspread/po/pyspread-0.2.3.pot
+++ b/pyspread/po/pyspread-0.2.3.pot
@@ -216,7 +216,7 @@ msgid "&Clear globals"
 msgstr ""
 
 #: src/gui/_menubars.py:202
-msgid "Deletes global veriables from memory and reloads base modules"
+msgid "Deletes global variables from memory and reloads base modules"
 msgstr ""
 
 #: src/gui/_menubars.py:205
@@ -662,7 +662,7 @@ msgid ""
 msgstr ""
 
 #: src/gui/_main_window.py:690
-msgid "File collison"
+msgid "File collision"
 msgstr ""
 
 #: src/gui/_main_window.py:694
