man page moved into the docs folder

--- a/pyspread/doc/pyspread.1
+++ b/pyspread/doc/pyspread.1
@@ -18,11 +18,7 @@
 .SH NAME
 pyspread \- A non-traditional Python spreadsheet application.
 .SH SYNOPSIS
-.B pyspread
-.RI [ options ] " files" ...
-.br
-.B bar
-.RI [ options ] " files" ...
+.B pyspread\fR [\fIoptions\fR] "\fIfiles\fR" ...
 .SH DESCRIPTION
 .B pyspread
 is a non-traditional spreadsheet application that is based on and written in the
@@ -33,26 +29,24 @@ specific language obsolete. Each cell returns a Python object that can be access
 from other cells. These objects can represent anything including lists or matrices.
 .PP
 .SH OPTIONS
-These programs follow the usual GNU command line syntax, with long
+This program follows the usual GNU command line syntax, with long
 options starting with two dashes ('-').
 .TP
-.B \-h, \-\-help
+.BR \-h\fR, " " \fB\-\-help
 Show summary of options.
 .TP
-.B \-\-version
+.BR \-\-version
 Show version of program.
 .TP
-.B \-d DIMENSIONS, \-\-dimensions=DIMENSIONS
+.BR \-d " " \fIDIMENSIONS\fB ", " \-\-dimensions=\fIDIMENSIONS\fR
+
 Size of empty table, which is initially created.
-DIMENSIONS has the format (Rows, Columns, Tables).
-DIMENSIONS defaults to (1000, 100, 3).
-.\" .SH SEE ALSO
-.\" .BR bar (1),
-.\" .BR baz (1).
-.\" .br
-.\" The programs are documented fully by
-.\" .IR "The Rise and Fall of a Fooish Bar" ,
-.\" available via the Info system.
+.I
+DIMENSIONS
+has the format (Rows, Columns, Tables).
+.I
+DIMENSIONS
+defaults to (1000, 100, 3).
 .SH AUTHOR
 pyspread was written by Martin Manns.
 .PP
