--- a/README
+++ b/README
@@ -1,31 +1,30 @@
---------
+
 PYSPREAD
---------
+========
 
-Copyright by Martin Manns
+**Installation**
 
-Installation
-============
 
 See INSTALL file for installation and COPYING file for lincense
 
 Homepage: http://manns.github.com/pyspread/
 
 
-
-How to start hacking
-====================
+**How to start hacking**
 
 Fork the github repo at
 https://github.com/manns/pyspread.git
 
 In order to start pyspread without installation run
+```bash
 $ ./pyspread.sh
+```
 inside the top directory.
 
 Sources can be found in the sub-folder
+```bash
 pyspread/src
-
+```
 Commit your changes, push them into your fork and send a pull request.
 
 This page gives an overview how to do this:
