--- a/pyspread/po/nn.po
+++ b/pyspread/po/nn.po
@@ -1,16 +1,16 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# PySpread Norwegian Nynorsk translation.
+# Copyright (C) 2013
+# This file is distributed under the same license as the pyspread package.
+# Andreas Noteng <andreas@noteng.no>, 2013.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: pyspread 0.2.3.1\n"
+"Project-Id-Version: pyspread 0.2.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-05-07 21:29+0200\n"
-"PO-Revision-Date: 2013-05-26 20:58+0100\n"
+"PO-Revision-Date: 2013-06-02 19:26+0100\n"
 "Last-Translator: Andreas Noteng <andreas@noteng.no>\n"
-"Language-Team: \n"
+"Language-Team: Norwegian Nynorsk <i18n-nn@lister.ping.uio.no>\n"
 "Language: nn_NO\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -93,12 +93,8 @@ msgstr "%prog{version}"
 
 #: src/pyspread.py:110
 #, python-format
-msgid ""
-"Dimensions of empty grid (works only without filename) rows, cols, tables "
-"[default: %default]"
-msgstr ""
-"Dimensjonar på det tomme reknearket (verkar berre utan filnamn). Radar, "
-"kolonnar, tabellar [standard: %default]"
+msgid "Dimensions of empty grid (works only without filename) rows, cols, tables [default: %default]"
+msgstr "Dimensjonar på det tomme reknearket (verkar berre utan filnamn). Radar, kolonnar, tabellar [standard: %default]"
 
 #: src/pyspread.py:127
 msgid "Cell dimension must be > 0."
@@ -110,8 +106,7 @@ msgstr "Du kan opne berre ei fil av gongen."
 
 #: src/pyspread.py:240
 msgid "You need a unicode build of wxPython to run pyspread."
-msgstr ""
-"Du treng ein utgåve av wxPython med unicode-støtte for å kjøyre PySpread."
+msgstr "Du treng ein utgåve av wxPython med unicode-støtte for å kjøyre PySpread."
 
 #: src/gui/_menubars.py:123 src/gui/_menubars.py:196
 msgid "&Approve file"
@@ -767,9 +762,7 @@ msgstr "Tryggleiksmodus deaktivert."
 
 #: src/gui/_main_window.py:838
 msgid "Deleting globals and reloading modules cannot be undone. Proceed?"
-msgstr ""
-"Om du sletter globale variablar og lastar inn modulane på nytt kan dette "
-"ikkje omgjerast. Ynskjer du å fortsette?"
+msgstr "Om du sletter globale variablar og lastar inn modulane på nytt kan dette ikkje omgjerast. Ynskjer du å fortsette?"
 
 #: src/gui/_main_window.py:840
 msgid "Really delete globals and modules?"
@@ -987,9 +980,7 @@ msgstr "Histogram"
 #: src/gui/_chart_dialog.py:609
 msgid ""
 "Histogram data series\n"
-"Multiple data sets can be provided as a list or as a 2-D ndarray in which "
-"each columnis a dataset. Note that the ndarray form is transposed relative "
-"to the list form."
+"Multiple data sets can be provided as a list or as a 2-D ndarray in which each columnis a dataset. Note that the ndarray form is transposed relative to the list form."
 msgstr ""
 
 #: src/gui/_chart_dialog.py:613
@@ -997,9 +988,7 @@ msgid "Either an integer number of bins or a bin sequence"
 msgstr ""
 
 #: src/gui/_chart_dialog.py:614
-msgid ""
-"If True then the first element is the counts normalizedto form a probability "
-"density, i.e., n/(len(x)*dbin)."
+msgid "If True then the first element is the counts normalizedto form a probability density, i.e., n/(len(x)*dbin)."
 msgstr ""
 
 #: src/gui/_chart_dialog.py:616
@@ -1418,8 +1407,7 @@ msgstr ""
 
 #: src/gui/_widgets.py:947
 msgid "For switching tables enter the table number or use the mouse wheel."
-msgstr ""
-"Skriv inn tabellnummeret eller nytt mushjulet for å bytte mellom tabellar."
+msgstr "Skriv inn tabellnummeret eller nytt mushjulet for å bytte mellom tabellar."
 
 #: src/gui/_dialogs.py:173
 msgid "Dialect"
@@ -1427,18 +1415,15 @@ msgstr "Dialekt"
 
 #: src/gui/_dialogs.py:174
 msgid ""
-"To make it easier to specify the format of input and output records, "
-"specific formatting parameters are grouped together into dialects.\n"
+"To make it easier to specify the format of input and output records, specific formatting parameters are grouped together into dialects.\n"
 "'excel': Defines the usual properties of an Excel-generated CSV file.\n"
 "'sniffer': Deduces the format of a CSV file\n"
-"'excel-tab': Defines the usual properties of an Excel-generated TAB-"
-"delimited file."
+"'excel-tab': Defines the usual properties of an Excel-generated TAB-delimited file."
 msgstr ""
 "Dei forskjellige formateringsparametra er gruppert i dialektar.\n"
 "'excel': Definerar dei vanlege eigenskapane for Excelgenererte CSV-filar.\n"
 "'sniffer': Standardformatet for CSV-filar.\n"
-"'excel-tab': Definerar dei vanlege eigenskapane for tabulatordelte "
-"Excelgenererte CSV-filar."
+"'excel-tab': Definerar dei vanlege eigenskapane for tabulatordelte Excelgenererte CSV-filar."
 
 #: src/gui/_dialogs.py:180
 msgid "Delimiter"
@@ -1453,24 +1438,15 @@ msgid "Doublequote"
 msgstr "Hermetekn"
 
 #: src/gui/_dialogs.py:183
-msgid ""
-"Controls how instances of quotechar appearing inside a field should be "
-"themselves be quoted. When True, the character is doubled. When False, the "
-"escapechar is used as a prefix to the quotechar."
-msgstr ""
-"Kontrollerer korleis sitatteikn inne i eit felt skal siteres. Når sann vert "
-"teiknet sitert med hermetekn og når usann vert verneteiknet nytta som ein "
-"prefiks til sitatteiknet."
+msgid "Controls how instances of quotechar appearing inside a field should be themselves be quoted. When True, the character is doubled. When False, the escapechar is used as a prefix to the quotechar."
+msgstr "Kontrollerer korleis sitatteikn inne i eit felt skal siteres. Når sann vert teiknet sitert med hermetekn og når usann vert verneteiknet nytta som ein prefiks til sitatteiknet."
 
 #: src/gui/_dialogs.py:187
 msgid "Escape character"
 msgstr "Escapeteikn"
 
 #: src/gui/_dialogs.py:188
-msgid ""
-"A one-character string used by the writer to escape the delimiter if quoting "
-"is set to QUOTE_NONE and the quotechar if doublequote is False. On reading, "
-"the escapechar removes any special meaning from the following character."
+msgid "A one-character string used by the writer to escape the delimiter if quoting is set to QUOTE_NONE and the quotechar if doublequote is False. On reading, the escapechar removes any special meaning from the following character."
 msgstr ""
 
 #: src/gui/_dialogs.py:193
@@ -1478,12 +1454,8 @@ msgid "Quote character"
 msgstr "Sitatteikn"
 
 #: src/gui/_dialogs.py:194
-msgid ""
-"A one-character string used to quote fields containing special characters, "
-"such as the delimiter or quotechar, or which contain new-line characters."
-msgstr ""
-"Ein streng på eit teikn som vert nytta til å sitere tekst som inneheld "
-"spesielle teikn"
+msgid "A one-character string used to quote fields containing special characters, such as the delimiter or quotechar, or which contain new-line characters."
+msgstr "Ein streng på eit teikn som vert nytta til å sitere tekst som inneheld spesielle teikn"
 
 #: src/gui/_dialogs.py:197
 msgid "Quoting style"
@@ -1498,12 +1470,8 @@ msgid "Header present"
 msgstr "Overskrift finst"
 
 #: src/gui/_dialogs.py:200
-msgid ""
-"Analyze the CSV file and treat the first row as strings if it appears to be "
-"a series of column headers."
-msgstr ""
-"Analyser CSV-fila og behandl første rad som strenger om det ser ut til å "
-"vere kolonneoverstrifter."
+msgid "Analyze the CSV file and treat the first row as strings if it appears to be a series of column headers."
+msgstr "Analyser CSV-fila og behandl første rad som strenger om det ser ut til å vere kolonneoverstrifter."
 
 #: src/gui/_dialogs.py:202
 msgid "Skip initial space"
@@ -1698,12 +1666,8 @@ msgid "Valid signature found. File is trusted."
 msgstr "Fila er signert av ein signatur du stolar på."
 
 #: src/actions/_grid_actions.py:185
-msgid ""
-"File is not properly signed. Safe mode activated. Select File -> Approve to "
-"leave safe mode."
-msgstr ""
-"Aktiverte sikkermodus fordi fila ikkje er riktig signert. Vel Fil -> "
-"Godkjenn for å forlate sikkermodus."
+msgid "File is not properly signed. Safe mode activated. Select File -> Approve to leave safe mode."
+msgstr "Aktiverte sikkermodus fordi fila ikkje er riktig signert. Vel Fil -> Godkjenn for å forlate sikkermodus."
 
 #: src/actions/_grid_actions.py:205
 msgid "File format unsupported."
@@ -1776,12 +1740,8 @@ msgid "Import cell overflow missing"
 msgstr ""
 
 #: src/actions/_grid_actions.py:727
-msgid ""
-"The imported data did not fit into the grid {cause}. It has been truncated. "
-"Use a larger grid for full import."
-msgstr ""
-"Importert data passar ikkje i reknearket {cause}. Datasettet er avkorta. "
-"Bruk eit større rekneark for ein full import."
+msgid "The imported data did not fit into the grid {cause}. It has been truncated. Use a larger grid for full import."
+msgstr "Importert data passar ikkje i reknearket {cause}. Datasettet er avkorta. Bruk eit større rekneark for ein full import."
 
 #: src/actions/_grid_actions.py:736
 msgid "s"
