--- a/pyspread/authors
+++ b/pyspread/authors
@@ -4,11 +4,13 @@ Pyspread authors
 Martin Manns
 
 
-
 Translators
 ===========
 
-Danish:     Joe Hansen
-Dutch:      Mark Haanen
-Ukrainian:  Yuri Chornoivan
-German:     Mario Blättermann
+Danish:                 Joe Hansen
+Dutch:                  Mark Haanen
+Ukrainian:              Yuri Chornoivan
+German:                 Mario Blättermann, Martin Manns, Christian Kirbach
+Nowegian Nynorsk:       Andreas Noteng
+Nowegian Bokmaal:       Andreas Noteng
+Brazilian Portuguese:   Enrico Nicoletto
