--- a/pyspread/thanks
+++ b/pyspread/thanks
@@ -3,7 +3,9 @@ Thanks to
 
 Bosko Markovic                  for setting up the pyspread wiki
 Andy Throgmorton                for testing pyspread
-Shai Revzen          	         for the cycle detection algorithm
+Shai Revzen          	        for the cycle detection algorithm
+
+Andreas Noteng                  for creating and maintaining the Debian and Ubuntu packages
 
 The Translation Project         for making localization possible
 
